--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
 
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -10,7 +14,7 @@
     {% block head %}{% endblock %}
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <!-- content -->{% block content %}{% endblock %}      <!-- /content -->
     </div>
   </body>
