--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,6 +49,11 @@
     margin-bottom: 0px;
     padding-left: 5px;
   }
+  #map:after {
+    padding-top: 90%;
+    display: block;
+    content: '';
+  }
 </style>
 <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=fsTvRBUeUiobhQZtiWzE&submodules=geocoder"></script>
 <script type="text/javascript">
@@ -194,7 +199,7 @@ $(function() {
 </script>
 {% endblock %}
 {% block content %}
-<div id="map" style="width:100%;height:500px;"></div>
+<div id="map" style="width:100%;"></div>
 <div id="list">
 </div>
 {% endblock %}
