Force each post to stay in one line

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,6 +49,9 @@
     margin-bottom: 0px;
     padding-left: 5px;
   }
+  #posts>div {
+    white-space: nowrap;
+  }
   #map:after {
     padding-top: 90%;
     display: block;
