--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -149,6 +149,7 @@
       .search { position:absolute;z-index:1000;top:20px;left:20px; }
       .search #query { width:150px;height:20px;line-height:20px;border:solid 1px #555;padding:5px;font-size:12px;box-sizing:content-box; }
       .search #submit { height:30px;line-height:30px;padding:0 10px;font-size:12px;border:solid 1px #555;border-radius:3px;cursor:pointer;box-sizing:content-box; }
+      .post-blog, .post-subject { white-space:nowrap;overflow:hidden; }
     </style>
     <div id="map" style="width:100%;height:500px;">
       <div class="search" style="">
@@ -170,9 +171,16 @@
   <div class="col-md-6">
     {% for p in posts %}
     <div class="post" blog-id="{{ p.blog_id }}">
-      <a href="{{ p.url }}" target="_blank">{{ p.subject }}</a>
-      <small>{{ p.date.strftime('%Y-%m-%d %H:%M') }}</small>
-      <a href="{{ url_for('delete', candidate_id=p.id) }}">Del</a>
+      <div class="post-blog col-md-2">
+        {{ p.blog.name }}
+      </div>
+      <div class="post-subject col-md-6">
+        <a href="{{ p.url }}" target="_blank" title="{{ p.subject }}">{{ p.subject }}</a>
+      </div>
+      <div class="col-md-4">
+        <small>{{ p.date.strftime('%y-%m-%d %H:%M') }}</small>
+        <a href="{{ url_for('delete', candidate_id=p.id) }}">X</a>
+      </div>
     </div>
     {% endfor %}
   </div>
